fix overlapping motd badge

--- a/src/styles/favourites/favourite-card.css
+++ b/src/styles/favourites/favourite-card.css
@@ -13,11 +13,14 @@
 
 .favourite-card__title {
   margin: 0;
-  grid-column: 2/ -1;
+  grid-column: 2 / span 1;
   grid-row: 1;
 }
 
 .favourite-card__info {
+  grid-row: 2;
+  grid-column: 2 / span 2;
+
   margin: 0;
 
   font-size: 0.9em;
